PropertyConditionsController is created with getAll endpoint, list of PropertyConditions is eagerly fetched and converted to list of dtos